--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <title>404 NOT FOUND</title>
 </head>
+
 <body>
-    <header>
-        <h1>404 NOT FOUND</h1>
-    </header>
-    <div id="main-content">
-        <img id="scarecrow" src="Scarecrow.png" alt="">
-        <div id="info-error">
-            <h1>I have bad news for you</h1>
-            <p>The page you are looking for might be removed or is temporarily unavailable</p>
-            <button id="back-home">baCK TO HOMEPAge</button>
+    <div class="main-container">
+        <header class="page-title-container">
+            <h1 class="page-title-container__title">404 NOT FOUND</h1>
+        </header>
+
+        <div class="center-container">
+            <img class="center-container__scarecrow-img" src="IMAGES/Scarecrow.png" alt="Scare Crow">
+            <div class="center-container__info-error">
+                <h1 class="info-error__h1">I have bad news for you</h1>
+                <p class="info-error__paragraph">The page you are looking for might be removed or is temporarily unavailable</p>
+                <button class="back-home-button" id="">baCK TO HOMEPAge</button>
+            </div>
         </div>
+
+        <footer class="footer">
+            <h3 class="footer__title">Eufránio Diogo @ DevChallenges.io</h3>
+        </footer>
     </div>
-    <footer>
-        <h3>Eufránio Diogo @ DevChallenges.io</h3>
-    </footer>
 </body>
+
 </html>
